--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool]
 [tool.poetry]
 name = "centraal_dataframework"
-version = "0.5.7"
+version = "0.1"
 homepage = "https://github.com/centraal-api/centraal-dataframework"
 description = "Utilidades para interactuar con Azure Datalake."
 authors = ["centraal.studio <equipo@centraal.studio>"]
@@ -23,13 +23,13 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.8,<4.0"
+python = ">=3.8,<3.10"
 black  = { version = "^22.3.0", optional = true}
 isort  = { version = "^5.8.0", optional = true}
-flake8  = { version = "^3.9.2", optional = true}
+flake8  = { version = ">=3.9.2", optional = true}
 flake8-docstrings = { version = "^1.6.0", optional = true }
-pytest  = { version = "^6.2.4", optional = true}
-pytest-cov  = { version = "^2.12.0", optional = true}
+pytest  = { version = ">=6.2.4", optional = true}
+pytest-cov  = { version = ">=2.12.0", optional = true}
 tox  = { version = "^3.20.1", optional = true}
 virtualenv  = { version = "^20.2.2", optional = true}
 pip  = { version = ">=22.0", optional = true}
@@ -44,6 +44,8 @@ mkdocs-autorefs = {version = "^0.3", optional = true}
 pre-commit = {version = "^2.12.0", optional = true}
 toml = {version = "^0.10.2", optional = true}
 bump2version = {version = "^1.0.1", optional = true}
+jupyter = {version = ">=1.0", optional = true}
+azure-functions  = ">1.0,<2.0"
 azure-datalake-utils = ">=0.5.7,<1.0"
 great-expectations = ">=0.17,<1.0"
 
@@ -60,7 +62,7 @@ test = [
     "Jinja2"
     ]
 
-dev = ["tox", "pre-commit", "virtualenv", "pip", "twine", "toml", "bump2version"]
+dev = ["tox", "pre-commit", "virtualenv", "pip", "twine", "toml", "bump2version", "jupyter"]
 
 doc = [
     "mkdocs",
