--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -20,6 +20,9 @@ jobs:
       matrix:
         python-versions: [ 3.8, '3.9']
 
+    permissions:
+      id-token: write
+
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
