--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,8 @@ jobs:
     strategy:
       matrix:
         python-versions: [3.8,3.9]
-
+    permissions:
+      id-token: write
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: Get version from tag
