--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       matrix:
         python-versions: [ 3.8, '3.9']
-
+    environment: release-test
     permissions:
       id-token: write
 
@@ -47,7 +47,4 @@ jobs:
       - name: publish to Test PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
-          user: __token__
-          password: ${{ secrets.TEST_PYPI_API_TOKEN}}
           repository_url: https://test.pypi.org/legacy/
-          skip_existing: true
