--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -48,3 +48,4 @@ jobs:
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           repository_url: https://test.pypi.org/legacy/
+          skip_existing: true
