--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,6 +25,7 @@ jobs:
     environment: release
     permissions:
       id-token: write
+      contents: write
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: Get version from tag
