actualizacion de skip-existing

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -77,4 +77,4 @@ jobs:
       - name: publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
-          skip_existing: true
+          skip-existing: true
