--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -47,5 +47,5 @@ jobs:
       - name: publish to Test PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
-          repository_url: https://test.pypi.org/legacy/
-          skip_existing: true
+          repository-url: https://test.pypi.org/legacy/
+          skip-existing: true
